# personal-account-manager

./: .bedrock_agentcore.yaml  .gitignore  .gitmodules  404.html  PersonalSupportAgentDeploymentStack.yaml  README.md  README_ja.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.bedrock_agentcore/agent_support_agent/: Dockerfile
.kiro/agents/: developer.json
AWS-General/aws_questions/: index.html
AWS-General/bedrock_faq/: index.html
GenU/chapter1_overview_setup/: index.html
GenU/chapter2_chat_functionality/: index.html
GenU/chapter3_rag_functionality/: index.html
GenU/chapter4_generation_functions/: index.html
GenU/chapter5_image_voice/: index.html
GenU/chapter6_writing_meeting/: index.html
GenU/chapter7_usecase_builder/: index.html
GenU/chapter8_deployment/: index.html
GenU/chapter9_security/: index.html
agent/: .dockerignore  __main__.py  prompts.py  requirements.txt  support_agent.py  tools.py
agent/data/: Home.txt  aws_questions.txt  bedrock_faq.txt  chapter1_overview_setup.txt  chapter3_rag_functionality.txt  chapter6_writing_meeting.txt  chapter8_deployment.txt
agent/knowledge/: wiki_source.py
cdk/: .gitignore  README.md  cdk.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: support-agent-stack.ts
docs/: Home.md
docs/GenU/: chapter1_overview_setup.md  chapter2_chat_functionality.md  chapter3_rag_functionality.md  (+6 more)
search/: search_index.json
spec/: design.md  progress.md  requirements.md
stylesheets/: extra.css
tests/: test_support_agent.py  test_wiki_source.py
